cabal-version:      3.0
name:               obelisk-ios-libfrontend
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ali Abrar
maintainer:         ali.abrar@obsidian.systems
-- copyright:
category:           Distribution
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable libfrontend.a
  if !(os(darwin) || os(ios))
    buildable: False
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , bytestring
               , common
               , obelisk-ios-libfrontendconfig
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , frontend
               , data-default
               , jsaddle
               , jsaddle-wkwebview
  ghc-options: -threaded -O2 -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits -v -fPIC
  cc-options: -fno-stack-protector -DTABLES_NEXT_TO_CODE -fPIC -v
  ld-options: -v
  ghc-options: -Dios_HOST_OS -lHSrts_thr -lffi -lm -llog -staticlib
  cc-options: -staticlib
  ld-options: -staticlib
